--- a/dwr_analysis.ipynb
+++ b/dwr_analysis.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Working with shapefiles and dataframe in Python Notebooks (based on Jupyter Notebooks) in ArcGIS\n",
+    "# Working with shapefiles and dataframe in Python Notebooks in ArcGIS\n",
     "\n",
     "This code downloads an ArcGIS shapefile from an URL, unzips, reads, and converts to a pandas dataframe so that the data can be processed and visualized. \n",
     "\n",
